# multi-source-ingestion-pipeline

./: .env.example  Makefile  README.md  pyproject.toml
src/: base.py  builders.py  gateways.py  main.py  manager.py  readers.py  steps.py  tasks.py
src/config/: __init__.py
