[tool.poetry]
name = "operation-eagle"
version = "0.1.0"
description = ""
authors = ["Vlad Adumitracesei <vladadumitracesei02@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.1"
boto3 = "^1.35.94"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
